z-index fix

--- a/css/style.css
+++ b/css/style.css
@@ -179,7 +179,7 @@ body {
     left: -2px;
     position: absolute;
     background: linear-gradient(90grad, #7b1e30, #0457ad);
-    z-index: 1;
+    z-index: 10;
     padding: 5px;
     border: 2px azure solid;
     border-radius: 20px;
